# up1-rust

./: .gitignore  Cargo.toml  README.md  flake.nix  server.json.example
src/: main.rs
