[package]
name = "up1-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.4", features = ["multipart", "http2"] }
camino = { version = "1.0.7", features = ["serde1"] }
clap = { version = "3.1.17", features = ["derive"] }
config-file = { version = "0.2.3", features = ["json"], default-features = false }
hex = "0.4.3"
hmac-sha256 = "1.1.2"
serde = { version = "1.0.137", features = ["serde_derive", "derive"] }
tempfile = "3.3.0"
tokio = { version = "1.18.1", features = ["rt", "rt-multi-thread", "tokio-macros", "macros", "sync", "parking_lot", "fs"] }
tower-http = { version = "0.3.2", features = ["fs"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
